# GeometryModel

./: .travis.yml  CMakeLists.txt  LICENSE  README.md
include/: GeometryModel.h  XDEReader.h
src/: GeometryModel.cpp  XDEReader.cpp
tests/: test_CAD_Formats.cpp  test_GeometryModel.cpp  test_XDEReader.cpp  torous_n_box.igs  torous_n_box.stp
